# shadow-volume-2d

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Data/Shaders/: BlitMSAA.glsl  Circle.glsl  FXAA.glsl  GaussianBlur.glsl  GlobalDefines.glsl  LightMix.glsl  Mesh.glsl  ResolveMSAA.glsl  ShadowMapRender.glsl  ShadowMapVolume.glsl  VolumeLight.glsl  WhiteSolid.glsl
src/: Main.cpp  MainApp.cpp  MainApp.hpp  shadow-volumes-2d.cpp
src/Logic/: Arc.cpp  Arc.hpp  Circle.cpp  Circle.hpp  Cube.cpp  Cube.hpp  LightManagerInterface.hpp  LightManagerMap.cpp  LightManagerMap.hpp  LightManagerVolume.cpp  LightManagerVolume.hpp  Primitive.hpp  VolumeLight.hpp
src/Utils/: VideoWriter.cpp  VideoWriter.hpp
